FEATURE: Core | DHT NAT punching for firewalled peers [Parg]
FEATURE: Core | Console UI support for viewing specific plugin logs [Parg]
FEATURE: Core | Ability to rename and redirect files within a torrent [Parg]
FEATURE: Core | Compact storage for "do not download" files [Parg]
FEATURE: Core | Magnet URI protocol registration under windows [Parg]

CHANGE: Core  | Countermeasures against swarm DOS/poisoning [Nolar]
CHANGE: Core  | Health status for swarms where all known peers are connected now reported as OK [Parg]
CHANGE: Core  | Friendly hash-checking option now only applied during recheck operations and delay based on piece size [Parg]
CHANGE: Plug  | Major refactoring of plugin interface to separate out UI-level and core-level stuff [Parg]
CHANGE: Core  | Don't automatically remove directory contents shares if they (appear to) have been deleted [Parg]
CHANGE: Core  | Improved algorithm for detecting DHT port reachability [Parg]
CHANGE: Core  | DHT - removed cache-distance metrics and added value versions to handle value evolution correctly [Parg]
CHANGE: Core  | Reduced thread count by aggregating async listener dispatchers [Parg]
CHANGE: Core  | Major refactoring of Download and Disk managers [Parg]
CHANGE: Core  | Download totals don't include hash fails and discards and aren't included in share-ratio calculation [Parg]
CHANGE: Core  | "Max simultaneous outbound connection attempts" option no longer accepts zero as a disable value [Nolar]
CHANGE: UI    | Update to the latest SWT library (3.2M2) [Nolar]
CHANGE: Core  | Under OSX, now launches using the Java Preferences application configured JVM, enabling JRE 5.0 support [Nolar]

BUGFIX: Core  | Fix interested flag being set sometimes when seeding [Nolar]
BUGFIX: Core  | Wrong file name returned for stopped simple torrents [Parg]
BUGFIX: Core  | Seeder/leecher counts missing for published torrents [Parg]
BUGFIX: Core  | Stats going negative for hosted torrent average up/down [Parg]