@@ -31,6 +31,7 @@ FEATURE: Core | Console UI support for viewing specific plugin logs [Parg]
 FEATURE: Core | Ability to rename and redirect files within a torrent [Parg]
 FEATURE: Core | Compact storage for "do not download" files [Parg]
 FEATURE: Core | Magnet URI protocol registration under windows [Parg]
+FEATURE: UI   | Beginner configuration user mode provides a simplified interface [Gouss]
 
 CHANGE: Core  | Countermeasures against swarm DOS/poisoning [Nolar]
 CHANGE: Core  | Health status for swarms where all known peers are connected now reported as OK [Parg]
